[gd_scene load_steps=73 format=2]

[ext_resource path="res://Scenes/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Chance.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Community Chest.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Dice.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Monopoly.gd" type="Script" id=6]
[ext_resource path="res://Assets/Textures/roll_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/roll_button_neutral.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/roll_button_hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/Textures/pay_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/Textures/confirm_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/Textures/P4MoneyCounter.png" type="Texture" id=12]
[ext_resource path="res://Assets/Textures/pass_button_hover.png" type="Texture" id=13]
[ext_resource path="res://Assets/Textures/buy_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://Assets/Textures/pass_button_pressed.png" type="Texture" id=15]
[ext_resource path="res://Assets/Textures/buy_button_hover.png" type="Texture" id=16]
[ext_resource path="res://Assets/Textures/buy_button_neutral.png" type="Texture" id=17]
[ext_resource path="res://Assets/Textures/pass_button_neutral.png" type="Texture" id=18]
[ext_resource path="res://Assets/Textures/buyMenuBackground.png" type="Texture" id=19]
[ext_resource path="res://Assets/Textures/start_button_hover.png" type="Texture" id=20]
[ext_resource path="res://Assets/Textures/quit_button_neutral.png" type="Texture" id=21]
[ext_resource path="res://Assets/Textures/start_button_neutral.png" type="Texture" id=22]
[ext_resource path="res://Assets/Textures/quit_button_hover.png" type="Texture" id=23]
[ext_resource path="res://Assets/Textures/start_button_pressed.png" type="Texture" id=24]
[ext_resource path="res://Assets/Textures/quit_button_pressed.png" type="Texture" id=25]
[ext_resource path="res://Assets/Textures/P2MoneyCounter.png" type="Texture" id=26]
[ext_resource path="res://Assets/Textures/P3MoneyCounter.png" type="Texture" id=27]
[ext_resource path="res://Assets/Textures/P1MoneyCounter.png" type="Texture" id=28]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=29]
[ext_resource path="res://Assets/Textures/confirm_button_hover.png" type="Texture" id=30]
[ext_resource path="res://Assets/Textures/cancel_button_neutral.png" type="Texture" id=31]
[ext_resource path="res://Assets/Textures/cancel_button_hover.png" type="Texture" id=32]
[ext_resource path="res://Assets/Textures/cancel_button_pressed.png" type="Texture" id=33]
[ext_resource path="res://Assets/Textures/confirm_button_neutral.png" type="Texture" id=34]
[ext_resource path="res://Assets/Textures/trade_button_pressed.png" type="Texture" id=35]
[ext_resource path="res://Assets/Textures/trade_button_neutral.png" type="Texture" id=36]
[ext_resource path="res://Assets/Textures/trade_button_hover.png" type="Texture" id=37]
[ext_resource path="res://Scenes/Multiselect.tscn" type="PackedScene" id=38]
[ext_resource path="res://Assets/Textures/MenuBackground.png" type="Texture" id=39]
[ext_resource path="res://Assets/barrel/scene.gltf" type="PackedScene" id=40]
[ext_resource path="res://Assets/pirate_island/scene.gltf" type="PackedScene" id=41]
[ext_resource path="res://Assets/Sounds/OceanWaves.wav" type="AudioStream" id=42]
[ext_resource path="res://Assets/Sounds/Seagull2.mp3" type="AudioStream" id=43]
[ext_resource path="res://Assets/Sounds/Seagull1.wav" type="AudioStream" id=44]
[ext_resource path="res://Assets/Sounds/Seagull3.wav" type="AudioStream" id=45]
[ext_resource path="res://Assets/Textures/pay_button_hover.png" type="Texture" id=46]
[ext_resource path="res://Assets/Textures/bermuda_card_disabled.png" type="Texture" id=47]
[ext_resource path="res://Assets/Textures/bermuda_card_neutral.png" type="Texture" id=48]
[ext_resource path="res://Assets/Textures/bermuda_card_hover.png" type="Texture" id=49]
[ext_resource path="res://Assets/Textures/pay_button_neutral.png" type="Texture" id=50]
[ext_resource path="res://Assets/Fonts/SansSerifFLF.otf" type="DynamicFontData" id=51]
[ext_resource path="res://Scenes/CoolCamera.tscn" type="PackedScene" id=52]
[ext_resource path="res://Assets/Sounds/Pirates of the Caribbean - He's a Pirate (Extended).mp3" type="AudioStream" id=53]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="Gradient" id=11]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.558659, 0.849162 )
colors = PoolColorArray( 0, 1, 1, 1, 0, 0.290196, 0.52549, 1, 0, 0.12549, 0.501961, 1 )

[sub_resource type="GradientTexture2D" id=19]
gradient = SubResource( 11 )
fill_to = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=31]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 51 )

[sub_resource type="Theme" id=32]
default_font = SubResource( 31 )

[sub_resource type="PlaneMesh" id=22]
size = Vector2( 1000, 1000 )
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="Shader" id=23]
code = "shader_type spatial;

uniform vec4 out_color : hint_color = vec4(0.0, 0.2, 1.0, 1.0);
uniform float amount : hint_range(0.2, 5) = 0.8;

float generateOffset(float x, float z, float val1, float val2, float time){
	float speed = 1.0;
	
	float radiansX = ((mod(x + z * x * val1, amount) / amount) + (time * speed) * mod(x * 0.8 + z, 1.5)) * 2.0 * 3.14;
	float radiansZ = ((mod(val2 * (z * x + x * z), amount) / amount) + (time * speed) *2.0 * mod(x, 2.0)) * 2.0 * 3.14;
	
	return amount * 0.5 * (sin(radiansZ) + cos(radiansX));
}

vec3 applyDistortion(vec3 vertex, float time){
	float xd = generateOffset(vertex.x, vertex.z, 0.2, 0.1, time);
	float yd = generateOffset(vertex.x, vertex.z, 0.1, 0.3, time);
	float zd = generateOffset(vertex.x, vertex.z, 0.15, 0.2, time);
	return vertex + vec3(xd, yd, zd);
}

void vertex(){
	VERTEX = applyDistortion(VERTEX, TIME * 0.1);
}

void fragment(){
	NORMAL = normalize(cross(dFdx(VERTEX), dFdy(VERTEX)));
	METALLIC = 0.6;
	SPECULAR = 0.5;
	ROUGHNESS = 0.2;
	ALBEDO = out_color.xyz;
}"

[sub_resource type="ShaderMaterial" id=24]
shader = SubResource( 23 )
shader_param/out_color = Color( 0.0313726, 0.760784, 0.729412, 1 )
shader_param/amount = 3.0

[sub_resource type="ProceduralSky" id=20]

[sub_resource type="Environment" id=21]
background_mode = 2
background_sky = SubResource( 20 )
background_sky_custom_fov = 90.0
fog_enabled = true
fog_depth_begin = 0.0
fog_depth_end = 1090.5

[sub_resource type="Gradient" id=25]
interpolation_mode = 2
colors = PoolColorArray( 0.137695, 0.75, 0.75, 1, 0, 0.12549, 0.501961, 1 )

[sub_resource type="GradientTexture2D" id=26]
gradient = SubResource( 25 )
fill_to = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=27]
size = 36
outline_size = 1
outline_color = Color( 0.521569, 0.670588, 0.670588, 1 )
font_data = ExtResource( 51 )

[sub_resource type="Theme" id=28]
default_font = SubResource( 27 )

[sub_resource type="DynamicFont" id=29]
size = 60
outline_size = 2
font_data = ExtResource( 51 )

[sub_resource type="Theme" id=30]
default_font = SubResource( 29 )

[node name="Monopoly" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0 )
script = ExtResource( 6 )

[node name="HesAPirate" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 53 )

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="Dice" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.846, 0 )

[node name="Player1" parent="." instance=ExtResource( 5 )]
material = SubResource( 1 )
moveSpeed = 8.0

[node name="Player2" parent="." instance=ExtResource( 5 )]
material = SubResource( 3 )
moveSpeed = 8.0

[node name="Player3" parent="." instance=ExtResource( 5 )]
material = SubResource( 2 )
moveSpeed = 8.0

[node name="Player4" parent="." instance=ExtResource( 5 )]
material = SubResource( 4 )
moveSpeed = 8.0

[node name="Chance" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.698628, 0, 0.715486, 0, 1, 0, -0.715486, 0, 0.698628, 5.63307, 1.01922, 5.65196 )

[node name="CommunityChest" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.700909, 0, 0.71325, 0, 1, 0, -0.71325, 0, 0.700909, -5.51466, 1.019, -5.6965 )

[node name="P1Money" type="Label" parent="."]
visible = false
margin_left = 22.0
margin_top = -3.0
margin_right = 400.0
margin_bottom = 63.0
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P1 $Placeholder"
valign = 2
__meta__ = {
"_editor_description_": "Displays string representation of players money. Strings must begin with \"PX $\" for proper spacing (ie \"P1 $\" + \"1500\")"
}

[node name="P1Backdrop" type="Sprite" parent="P1Money"]
position = Vector2( 140, 47 )
scale = Vector2( 0.197917, 0.177396 )
z_index = -2
texture = ExtResource( 28 )
__meta__ = {
"_editor_description_": "Colored backdrop for player money. Helps with Readability"
}

[node name="P2Money" type="Label" parent="."]
visible = false
margin_left = 22.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 116.0
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P2 $Placeholder"
valign = 2
__meta__ = {
"_editor_description_": "Displays string representation of players money. Strings must begin with \"PX $\" for proper spacing (ie \"P1 $\" + \"1500\")"
}

[node name="P2Backdrop" type="Sprite" parent="P2Money"]
position = Vector2( 140, 48 )
scale = Vector2( 0.197917, 0.177396 )
z_index = -3
texture = ExtResource( 26 )
__meta__ = {
"_editor_description_": "Colored backdrop for player money. Helps with Readability"
}

[node name="P3Money" type="Label" parent="."]
visible = false
margin_left = 22.0
margin_top = 104.0
margin_right = 400.0
margin_bottom = 170.0
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P3 $Placeholder"
valign = 2
__meta__ = {
"_editor_description_": "Displays string representation of players money. Strings must begin with \"PX $\" for proper spacing (ie \"P1 $\" + \"1500\")"
}

[node name="P3Backdrop" type="Sprite" parent="P3Money"]
position = Vector2( 140, 48 )
scale = Vector2( 0.197917, 0.177396 )
z_index = -4
texture = ExtResource( 27 )
__meta__ = {
"_editor_description_": "Colored backdrop for player money. Helps with Readability"
}

[node name="P4Money" type="Label" parent="."]
visible = false
margin_left = 21.0
margin_top = 157.0
margin_right = 399.0
margin_bottom = 223.0
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P4 $Placeholder"
valign = 2
__meta__ = {
"_editor_description_": "Displays string representation of players money. Strings must begin with \"PX $\" for proper spacing (ie \"P1 $\" + \"1500\")"
}

[node name="P4Backdrop" type="Sprite" parent="P4Money"]
position = Vector2( 141, 48 )
scale = Vector2( 0.197917, 0.177396 )
z_index = -5
texture = ExtResource( 12 )
__meta__ = {
"_editor_description_": "Colored backdrop for player money. Helps with Readability"
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0 )
shadow_enabled = true

[node name="PlayerTurnUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RollDiceButton" type="TextureButton" parent="PlayerTurnUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -377.0
margin_top = -126.0
margin_right = 1123.0
margin_bottom = 474.0
rect_scale = Vector2( 0.248804, 0.192981 )
rect_clip_content = true
size_flags_vertical = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_editor_description_": "Button to trigger roll function. Displayed on player UI. Child of player object"
}

[node name="StartTradeButton" type="TextureButton" parent="PlayerTurnUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -126.0
margin_right = 1500.0
margin_bottom = 474.0
rect_scale = Vector2( 0.248804, 0.192981 )
rect_clip_content = true
size_flags_vertical = 0
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 37 )
__meta__ = {
"_editor_description_": "Button to trigger roll function. Displayed on player UI. Child of player object"
}

[node name="BuyMenu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.5
margin_top = -200.5
margin_right = 265.5
margin_bottom = 200.5
rect_scale = Vector2( 1, 0.997237 )

[node name="Buy" type="TextureButton" parent="BuyMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -125.0
margin_right = 1370.0
margin_bottom = 475.0
rect_scale = Vector2( 0.124, 0.095 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_editor_description_": "Button that allows you to buy the space you are on if you can afford it"
}

[node name="Pass" type="TextureButton" parent="BuyMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -125.0
margin_right = 1430.0
margin_bottom = 475.0
rect_scale = Vector2( 0.124125, 0.0947137 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_editor_description_": "Button to pass buying a space"
}

[node name="Space" type="Label" parent="BuyMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -257.0
margin_right = 257.0
margin_bottom = 55.0
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Placeholder"
align = 1
valign = 1
__meta__ = {
"_editor_description_": "This label shows the name of the space you are trying to purchase."
}

[node name="Price" type="Label" parent="BuyMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -202.5
margin_top = 50.0
margin_right = 200.5
margin_bottom = 105.0
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$Placeholder"
align = 1
valign = 1

[node name="Rent" type="Label" parent="BuyMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -202.5
margin_top = 92.1164
margin_right = 200.5
margin_bottom = 147.116
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$Placeholder"
align = 1
valign = 1

[node name="RentWithSet" type="Label" parent="BuyMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -202.5
margin_top = 131.224
margin_right = 200.5
margin_bottom = 186.224
theme = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$Placeholder"
align = 1
valign = 1

[node name="BuyBackdrop" type="Sprite" parent="BuyMenu"]
position = Vector2( 212.5, 130.862 )
scale = Vector2( 0.30911, 0.275428 )
z_index = -1
texture = ExtResource( 19 )

[node name="JailMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = 3.0
mouse_filter = 2

[node name="PayBailButton" type="TextureButton" parent="JailMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -377.0
margin_top = -252.0
rect_scale = Vector2( 0.248804, 0.192981 )
rect_clip_content = true
size_flags_vertical = 0
texture_normal = ExtResource( 50 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 46 )
__meta__ = {
"_editor_description_": "Button to trigger roll function. Displayed on player UI. Child of player object"
}

[node name="UseCardButton" type="TextureButton" parent="JailMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -322.0
margin_top = -377.0
margin_right = 1178.0
margin_bottom = 223.0
rect_scale = Vector2( 0.248804, 0.192981 )
rect_clip_content = true
size_flags_vertical = 0
texture_normal = ExtResource( 48 )
texture_hover = ExtResource( 49 )
texture_disabled = ExtResource( 47 )
__meta__ = {
"_editor_description_": "Button to trigger roll function. Displayed on player UI. Child of player object"
}

[node name="TradeMenu" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 19 )
expand = true

[node name="MoneySliderMine" type="HSlider" parent="TradeMenu"]
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.4
anchor_bottom = 0.85
max_value = 5000.0
step = 10.0

[node name="Label" type="Label" parent="TradeMenu/MoneySliderMine"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_bottom = -35.8
theme = ExtResource( 29 )
text = "$0"
align = 1
valign = 1

[node name="MoneySliderTheirs" type="HSlider" parent="TradeMenu"]
anchor_left = 0.6
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.85
max_value = 5000.0
step = 10.0

[node name="Label" type="Label" parent="TradeMenu/MoneySliderTheirs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_bottom = -35.8
theme = ExtResource( 29 )
text = "$0"
align = 1
valign = 1

[node name="PlayerTradeSelect" type="OptionButton" parent="TradeMenu"]
anchor_left = 0.65
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.15
theme = ExtResource( 29 )

[node name="Confirm Trade" type="TextureButton" parent="TradeMenu"]
anchor_left = 0.15
anchor_top = 0.05
anchor_right = 0.35
anchor_bottom = 0.15
rect_scale = Vector2( 0.124, 0.095 )
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 30 )
__meta__ = {
"_editor_description_": "Button that allows you to buy the space you are on if you can afford it"
}

[node name="Cancel Trade" type="TextureButton" parent="TradeMenu"]
anchor_left = 0.4
anchor_top = 0.05
anchor_right = 0.6
anchor_bottom = 0.15
rect_scale = Vector2( 0.124125, 0.0947137 )
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": "Button to pass buying a space"
}

[node name="PropertiesMine" parent="TradeMenu" instance=ExtResource( 38 )]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.4
anchor_bottom = 0.7

[node name="PropertiesTheirs" parent="TradeMenu" instance=ExtResource( 38 )]
anchor_left = 0.6
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.7

[node name="MainMenu" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 39 )
expand = true

[node name="Subtitle" type="Label" parent="MainMenu"]
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.5
theme = SubResource( 32 )
text = "A Monopoly clone By: Team 7"
align = 1
valign = 1

[node name="Start game" type="TextureButton" parent="MainMenu"]
anchor_left = 0.45
anchor_top = 0.55
anchor_right = 0.45
anchor_bottom = 0.65
margin_right = 1315.0
margin_bottom = 540.0
grow_horizontal = 0
rect_scale = Vector2( 0.124, 0.095 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 20 )
__meta__ = {
"_editor_description_": "Button that allows you to buy the space you are on if you can afford it"
}

[node name="Quit game" type="TextureButton" parent="MainMenu"]
anchor_left = 0.55
anchor_top = 0.55
anchor_right = 0.55
anchor_bottom = 0.65
rect_scale = Vector2( 0.124125, 0.0947137 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": "Button to pass buying a space"
}

[node name="PlayersSlider" type="HSlider" parent="MainMenu"]
anchor_left = 0.55
anchor_top = 0.75
anchor_right = 0.9
anchor_bottom = 0.75
min_value = 2.0
max_value = 4.0
value = 4.0

[node name="PlayersSliderLabel" type="Label" parent="MainMenu"]
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 0.45
anchor_bottom = 0.8
theme = ExtResource( 29 )
text = "Number of Players: 4"
align = 2
valign = 1

[node name="AiSlider" type="HSlider" parent="MainMenu"]
anchor_left = 0.55
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.85
max_value = 4.0

[node name="AiSliderLabel" type="Label" parent="MainMenu"]
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.45
anchor_bottom = 0.9
theme = ExtResource( 29 )
text = "Number of AI: 0"
align = 2
valign = 1

[node name="DisplayCredits" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -58.0
margin_right = 52.0
margin_bottom = -21.0
text = "Credits"

[node name="Barrel" parent="." instance=ExtResource( 40 )]
transform = Transform( 0.438711, 0, 0, 0, 0.438711, 0, 0, 0, 0.438711, 0, -24.4006, 0 )

[node name="Island" parent="." instance=ExtResource( 41 )]
transform = Transform( 15.1498, 0, 1.88943, 0, 15.2672, 0, -1.88943, 0, 15.1498, -677.213, -87.469, -90.17 )

[node name="Water" type="Spatial" parent="."]
transform = Transform( 1.46218, 0, 0, 0, 0.803885, 0, 0, 0, 1.49357, 215.961, -4.24524, 997.207 )

[node name="MeshInstance" type="MeshInstance" parent="Water"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -491.603, -75.5369, -264.871 )
mesh = SubResource( 22 )
material/0 = SubResource( 24 )

[node name="Water3" type="Spatial" parent="."]
transform = Transform( 1.46218, 0, 0, 0, 0.803885, 0, 0, 0, 1.49357, 1646.01, -4.24524, 997.207 )

[node name="MeshInstance" type="MeshInstance" parent="Water3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -491.603, -75.5369, -264.871 )
mesh = SubResource( 22 )
material/0 = SubResource( 24 )

[node name="Water4" type="Spatial" parent="."]
transform = Transform( 1.46218, 0, 0, 0, 0.803885, 0, 0, 0, 1.49357, 1646.01, -4.24524, -456.787 )

[node name="MeshInstance" type="MeshInstance" parent="Water4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -491.603, -75.5369, -264.871 )
mesh = SubResource( 22 )
material/0 = SubResource( 24 )

[node name="Water2" type="Spatial" parent="."]
transform = Transform( 1.46218, 0, 0, 0, 0.803885, 0, 0, 0, 1.49357, 215.961, -4.24524, -487.944 )

[node name="MeshInstance" type="MeshInstance" parent="Water2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -491.603, -75.5369, -264.871 )
mesh = SubResource( 22 )
material/0 = SubResource( 24 )

[node name="Skybox" type="WorldEnvironment" parent="."]
environment = SubResource( 21 )

[node name="Waves" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 42 )

[node name="Seagull1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 44 )
volume_db = -10.0

[node name="Seagull2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 43 )
volume_db = -10.0

[node name="Seagull3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 45 )

[node name="ButtonBlocker" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CreditsMenu" type="TextureRect" parent="."]
visible = false
anchor_right = 1.002
anchor_bottom = 1.0
margin_right = -0.0480957
texture = SubResource( 26 )
expand = true

[node name="Credits" type="Label" parent="CreditsMenu"]
anchor_right = 1.0
anchor_bottom = 1.003
margin_left = 1.0
margin_right = -1.0
margin_bottom = 0.200012
theme = SubResource( 28 )
text = "
Credits:

Board Logic:                         Daniel Dayton  

UI and Player Input                 Christian Craft   
                                       
Chance and Chest Card:         Thomas Fan and  
Design and implementation         Matthew Armstrong

Camera and Dice Physics:          Santonio Vuocolo    

Pirate Island: CC Attribution to NicolasThuaud on Sketchfab.com 
Wooden Barrel: CC Attribution to Folgore on Sketchfab.com"
align = 1

[node name="back" type="Button" parent="CreditsMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -65.0
margin_right = 68.0
margin_bottom = -27.0
text = "Back"

[node name="OutputMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 101.0
margin_right = 328.0
margin_bottom = 181.0
theme = SubResource( 30 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Placeholder"
align = 1
valign = 1

[node name="CoolCamera" parent="." instance=ExtResource( 52 )]

[connection signal="button_up" from="PlayerTurnUI/RollDiceButton" to="." method="PlayerRollDice"]
[connection signal="button_up" from="PlayerTurnUI/StartTradeButton" to="." method="OpenTradeMenu"]
[connection signal="button_up" from="BuyMenu/Buy" to="." method="buySpace"]
[connection signal="button_up" from="BuyMenu/Pass" to="." method="passSpace"]
[connection signal="button_up" from="JailMenu/PayBailButton" to="." method="PayBail"]
[connection signal="button_up" from="JailMenu/UseCardButton" to="." method="GetOutOfJailFree"]
[connection signal="value_changed" from="TradeMenu/MoneySliderMine" to="." method="_on_MoneySliderMine_value_changed"]
[connection signal="value_changed" from="TradeMenu/MoneySliderTheirs" to="." method="_on_MoneySliderTheirs_value_changed"]
[connection signal="item_selected" from="TradeMenu/PlayerTradeSelect" to="." method="_on_PlayerTradeSelect_item_selected"]
[connection signal="button_up" from="TradeMenu/Confirm Trade" to="." method="confirmTrade"]
[connection signal="button_up" from="TradeMenu/Cancel Trade" to="." method="cancelTrade"]
[connection signal="button_up" from="MainMenu/Start game" to="." method="startGame"]
[connection signal="button_up" from="MainMenu/Quit game" to="." method="quitGame"]
[connection signal="value_changed" from="MainMenu/PlayersSlider" to="." method="_on_PlayersSlider_value_changed"]
[connection signal="value_changed" from="MainMenu/AiSlider" to="." method="_on_AiSlider_value_changed"]
[connection signal="button_up" from="MainMenu/DisplayCredits" to="." method="DisplayCredits"]
[connection signal="button_up" from="CreditsMenu/back" to="." method="hideCredits"]
